Update scrollbar hover bug

--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -178,7 +178,3 @@ code {
   border: 1px solid $syntax-bg-lighter;
   border-radius: 7px;
 }
-
-::-webkit-scrollbar:hover {
-  width: 10px;
-}
